pygobject_lookup_class: clear exceptions between calls and don't return with one set

https://bugzilla.gnome.org/show_bug.cgi?id=773394